--- a/SCPlayer/SCPlayer/Controllers/Cores/Library Screen/LibraryViewController.xib
+++ b/SCPlayer/SCPlayer/Controllers/Cores/Library Screen/LibraryViewController.xib
@@ -1,22 +1,102 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LibraryViewController" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LibraryViewController" customModule="SCPlayer" customModuleProvider="target">
             <connections>
+                <outlet property="favoritesButton" destination="ueo-ET-ext" id="BbE-g1-FcP"/>
+                <outlet property="libraryButton" destination="Edn-JF-Ki3" id="37B-NH-g1t"/>
+                <outlet property="libraryCollectionView" destination="MXE-jU-4fe" id="HdZ-yy-ZHi"/>
+                <outlet property="underFavoritesButtonView" destination="EcF-04-8z8" id="6G1-b3-j2w"/>
+                <outlet property="underLibraryButtonView" destination="FGC-HE-pc5" id="uXJ-uZ-MhI"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+            <subviews>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ueo-ET-ext">
+                    <rect key="frame" x="20" y="64" width="150" height="50"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="50" id="PwR-ZJ-77v"/>
+                        <constraint firstAttribute="width" constant="150" id="dpr-Lj-LH3"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="boldSystem" pointSize="26"/>
+                    <state key="normal" title="Favorites">
+                        <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </state>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Edn-JF-Ki3">
+                    <rect key="frame" x="170" y="64" width="150" height="50"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="50" id="HnW-vv-FbF"/>
+                        <constraint firstAttribute="width" constant="150" id="ilb-hk-WEt"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="boldSystem" pointSize="26"/>
+                    <state key="normal" title="Library">
+                        <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </state>
+                </button>
+                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="MXE-jU-4fe">
+                    <rect key="frame" x="0.0" y="139" width="414" height="723"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="g5L-KI-17L">
+                        <size key="itemSize" width="128" height="128"/>
+                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                        <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                    </collectionViewFlowLayout>
+                </collectionView>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EcF-04-8z8">
+                    <rect key="frame" x="20" y="114" width="150" height="5"/>
+                    <color key="backgroundColor" systemColor="systemGreenColor"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="5" id="LiE-sS-J9J"/>
+                        <constraint firstAttribute="width" constant="150" id="jgi-hd-4uq"/>
+                    </constraints>
+                </view>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FGC-HE-pc5">
+                    <rect key="frame" x="170" y="114" width="150" height="5"/>
+                    <color key="backgroundColor" systemColor="systemGreenColor"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="5" id="WDh-yF-2xy"/>
+                        <constraint firstAttribute="width" constant="150" id="nLO-Wv-xkH"/>
+                    </constraints>
+                </view>
+            </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <constraints>
+                <constraint firstItem="Edn-JF-Ki3" firstAttribute="leading" secondItem="ueo-ET-ext" secondAttribute="trailing" id="1kM-kM-Q3j"/>
+                <constraint firstItem="EcF-04-8z8" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="4uH-6M-NiE"/>
+                <constraint firstItem="Edn-JF-Ki3" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="20" id="5Ag-Ig-ILc"/>
+                <constraint firstItem="ueo-ET-ext" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="7j2-Iu-eJJ"/>
+                <constraint firstItem="FGC-HE-pc5" firstAttribute="leading" secondItem="EcF-04-8z8" secondAttribute="trailing" id="GKG-kX-auH"/>
+                <constraint firstItem="MXE-jU-4fe" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="OXP-RN-6Yc"/>
+                <constraint firstItem="MXE-jU-4fe" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="QvC-bI-9op"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="MXE-jU-4fe" secondAttribute="bottom" id="TMs-xD-Su2"/>
+                <constraint firstItem="EcF-04-8z8" firstAttribute="top" secondItem="ueo-ET-ext" secondAttribute="bottom" id="Ysb-xa-B3C"/>
+                <constraint firstItem="ueo-ET-ext" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="20" id="gKy-Cv-QzY"/>
+                <constraint firstItem="FGC-HE-pc5" firstAttribute="top" secondItem="Edn-JF-Ki3" secondAttribute="bottom" id="kg4-RT-mcc"/>
+                <constraint firstItem="MXE-jU-4fe" firstAttribute="top" secondItem="EcF-04-8z8" secondAttribute="bottom" constant="20" id="ybr-Ow-1zX"/>
+            </constraints>
+            <point key="canvasLocation" x="85.507246376811594" y="99.776785714285708"/>
         </view>
     </objects>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGreenColor">
+            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
