Refs [TASK][36557] Create Database for Playlist

--- a/SCPlayer/SCPlayer/Controllers/Cores/Home Screen/Home Screen Cell/Home Genre Label Cell/HomeGenreLabelCollectionViewCell.xib
+++ b/SCPlayer/SCPlayer/Controllers/Cores/Home Screen/Home Screen Cell/Home Genre Label Cell/HomeGenreLabelCollectionViewCell.xib
@@ -17,7 +17,7 @@
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Favorites" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="so7-KL-2fi">
-                        <rect key="frame" x="0.0" y="0.0" width="354" height="50"/>
+                        <rect key="frame" x="20" y="0.0" width="334" height="50"/>
                         <fontDescription key="fontDescription" type="boldSystem" pointSize="27"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -27,10 +27,10 @@
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="so7-KL-2fi" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="8yD-Gi-1ob"/>
-                <constraint firstItem="so7-KL-2fi" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="iKY-x4-X7Y"/>
-                <constraint firstAttribute="trailing" secondItem="so7-KL-2fi" secondAttribute="trailing" id="jmb-NL-eeA"/>
-                <constraint firstAttribute="bottom" secondItem="so7-KL-2fi" secondAttribute="bottom" id="tTf-2E-KKg"/>
+                <constraint firstItem="so7-KL-2fi" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="20" id="9az-nd-gWI"/>
+                <constraint firstAttribute="bottom" secondItem="so7-KL-2fi" secondAttribute="bottom" id="Wge-wm-8bg"/>
+                <constraint firstAttribute="trailing" secondItem="so7-KL-2fi" secondAttribute="trailing" id="Zyr-CS-38t"/>
+                <constraint firstItem="so7-KL-2fi" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="qoj-oi-TXU"/>
             </constraints>
             <size key="customSize" width="354" height="50"/>
             <connections>
