--- a/SCPlayer/SCPlayer/Controllers/Orthers/Add New Playlist Screen/AddNewPlaylistViewController.xib
+++ b/SCPlayer/SCPlayer/Controllers/Orthers/Add New Playlist Screen/AddNewPlaylistViewController.xib
@@ -1,22 +1,105 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="AddNewPlaylistViewController" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="AddNewPlaylistViewController" customModule="SCPlayer" customModuleProvider="target">
             <connections>
+                <outlet property="cancelButton" destination="e4G-Zd-fFr" id="YMp-Xs-cmm"/>
+                <outlet property="createButton" destination="OvS-Ey-8FS" id="y3l-U3-7bk"/>
+                <outlet property="inputTextField" destination="N8b-zK-FIM" id="f3n-fL-bf1"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+            <subviews>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Give your playlist a name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G0u-QO-gLC">
+                    <rect key="frame" x="68.5" y="299" width="277" height="29"/>
+                    <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="N8b-zK-FIM">
+                    <rect key="frame" x="50" y="378" width="314" height="50"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="50" id="8P4-43-7Bk"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <textInputTraits key="textInputTraits"/>
+                </textField>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="e4G-Zd-fFr">
+                    <rect key="frame" x="50" y="438" width="80" height="50"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="50" id="QeM-IB-P6b"/>
+                        <constraint firstAttribute="width" constant="80" id="xkb-3m-kc6"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                    <state key="normal" title="CANCEL">
+                        <color key="titleColor" systemColor="labelColor"/>
+                    </state>
+                    <connections>
+                        <action selector="didTapCancelButton:" destination="-1" eventType="touchUpInside" id="rxe-7z-4ZR"/>
+                    </connections>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OvS-Ey-8FS">
+                    <rect key="frame" x="284" y="438" width="80" height="50"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="80" id="VxH-h8-3tz"/>
+                        <constraint firstAttribute="height" constant="50" id="eeT-JL-VoT"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                    <state key="normal" title="CREATE">
+                        <color key="titleColor" systemColor="systemGreenColor"/>
+                    </state>
+                    <connections>
+                        <action selector="didTapCreateButton:" destination="-1" eventType="touchUpInside" id="99q-7k-nwP"/>
+                    </connections>
+                </button>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gUE-Qx-wxP">
+                    <rect key="frame" x="50" y="428" width="314" height="3"/>
+                    <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="3" id="RZm-WO-aTn"/>
+                    </constraints>
+                </view>
+            </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <constraints>
+                <constraint firstItem="gUE-Qx-wxP" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="50" id="3eT-Xs-Psz"/>
+                <constraint firstItem="N8b-zK-FIM" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" multiplier="0.9" id="4pt-NV-eRt"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="gUE-Qx-wxP" secondAttribute="trailing" constant="50" id="5a6-af-m4r"/>
+                <constraint firstItem="gUE-Qx-wxP" firstAttribute="top" secondItem="N8b-zK-FIM" secondAttribute="bottom" id="8uA-b2-QFi"/>
+                <constraint firstItem="e4G-Zd-fFr" firstAttribute="top" secondItem="N8b-zK-FIM" secondAttribute="bottom" constant="10" id="9uA-Fq-lkL"/>
+                <constraint firstItem="e4G-Zd-fFr" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="50" id="JUO-u3-4XL"/>
+                <constraint firstItem="G0u-QO-gLC" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" multiplier="0.7" id="M0Y-2S-aKr"/>
+                <constraint firstItem="N8b-zK-FIM" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="Vv8-ZY-iz1"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="N8b-zK-FIM" secondAttribute="trailing" constant="50" id="Xwr-wM-3Op"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="OvS-Ey-8FS" secondAttribute="trailing" constant="50" id="gie-oN-lF0"/>
+                <constraint firstItem="N8b-zK-FIM" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="50" id="qWW-1R-mOs"/>
+                <constraint firstItem="G0u-QO-gLC" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="wfy-Ja-f9i"/>
+                <constraint firstItem="OvS-Ey-8FS" firstAttribute="top" secondItem="N8b-zK-FIM" secondAttribute="bottom" constant="10" id="zrN-5u-Xmt"/>
+            </constraints>
+            <point key="canvasLocation" x="69.565217391304358" y="94.419642857142847"/>
         </view>
     </objects>
+    <resources>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGreenColor">
+            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
