--- a/SCPlayer/SCPlayer/Controllers/Orthers/Add New Song For Playlist Screen/AddSongViewController.xib
+++ b/SCPlayer/SCPlayer/Controllers/Orthers/Add New Song For Playlist Screen/AddSongViewController.xib
@@ -1,22 +1,60 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="AddSongViewController" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="AddSongViewController" customModule="SCPlayer" customModuleProvider="target">
             <connections>
+                <outlet property="listTrackCollectionView" destination="18M-Fi-gLO" id="DcW-ZJ-Fog"/>
+                <outlet property="searchBar" destination="KoX-Z9-zKL" id="Gbd-gS-7rS"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+            <subviews>
+                <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="KoX-Z9-zKL">
+                    <rect key="frame" x="20" y="44" width="374" height="55"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="55" id="B2T-Cm-ryK"/>
+                    </constraints>
+                    <textInputTraits key="textInputTraits"/>
+                </searchBar>
+                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="18M-Fi-gLO">
+                    <rect key="frame" x="0.0" y="99" width="414" height="763"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="EyI-bW-e0d">
+                        <size key="itemSize" width="128" height="128"/>
+                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                        <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                    </collectionViewFlowLayout>
+                </collectionView>
+            </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <constraints>
+                <constraint firstItem="KoX-Z9-zKL" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="5Js-gH-kay"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="KoX-Z9-zKL" secondAttribute="trailing" constant="20" id="H7h-gZ-imh"/>
+                <constraint firstItem="18M-Fi-gLO" firstAttribute="top" secondItem="KoX-Z9-zKL" secondAttribute="bottom" id="OyL-9r-UXF"/>
+                <constraint firstItem="KoX-Z9-zKL" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="ScR-Wy-nd3"/>
+                <constraint firstItem="18M-Fi-gLO" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="jZ9-g1-ZEe"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="18M-Fi-gLO" secondAttribute="trailing" id="osY-XC-6ga"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="18M-Fi-gLO" secondAttribute="bottom" id="v9d-5J-YAJ"/>
+            </constraints>
+            <point key="canvasLocation" x="60.869565217391312" y="94.419642857142847"/>
         </view>
     </objects>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
