--- a/SCPlayer/SCPlayer/Controllers/Orthers/Search Results Screen/Search Result Cell/SearchResultsCellCollectionViewCell.xib
+++ b/SCPlayer/SCPlayer/Controllers/Orthers/Search Results Screen/Search Result Cell/SearchResultsCellCollectionViewCell.xib
@@ -10,14 +10,14 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="SearchResultsCellCollectionViewCell" customModule="SCPlayer" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="396" height="122"/>
+            <rect key="frame" x="0.0" y="0.0" width="396" height="109"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="396" height="122"/>
+                <rect key="frame" x="0.0" y="0.0" width="396" height="109"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="avt" translatesAutoresizingMaskIntoConstraints="NO" id="41W-4c-QKD">
-                        <rect key="frame" x="0.0" y="0.0" width="100" height="122"/>
+                        <rect key="frame" x="0.0" y="0.0" width="100" height="109"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="100" id="8X6-iw-VSx"/>
                         </constraints>
@@ -32,7 +32,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Charlie Puth" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7g2-7q-elP">
-                        <rect key="frame" x="120" y="58" width="196" height="44"/>
+                        <rect key="frame" x="120" y="58" width="196" height="31"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -63,14 +63,14 @@
                 <constraint firstItem="41W-4c-QKD" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="lBR-r9-Dri"/>
                 <constraint firstItem="7l2-nZ-aLo" firstAttribute="leading" secondItem="41W-4c-QKD" secondAttribute="trailing" constant="20" id="ouQ-ze-YY2"/>
             </constraints>
-            <size key="customSize" width="396" height="122"/>
+            <size key="customSize" width="396" height="109"/>
             <connections>
                 <outlet property="artistLabel" destination="7g2-7q-elP" id="hDa-oF-hyi"/>
                 <outlet property="imageView" destination="41W-4c-QKD" id="Bul-fu-NN1"/>
                 <outlet property="likeButton" destination="kOS-cg-SA6" id="pmM-HN-iNJ"/>
                 <outlet property="songNameLabel" destination="7l2-nZ-aLo" id="8tV-0D-5lt"/>
             </connections>
-            <point key="canvasLocation" x="353.62318840579712" y="91.071428571428569"/>
+            <point key="canvasLocation" x="353.62318840579712" y="86.71875"/>
         </collectionViewCell>
     </objects>
     <resources>
