--- a/SCPlayer/SCPlayer/Controllers/Cores/Home Screen/Home Screen Cell/Home List Track/HomeTrackCollectionViewCell.xib
+++ b/SCPlayer/SCPlayer/Controllers/Cores/Home Screen/Home Screen Cell/Home List Track/HomeTrackCollectionViewCell.xib
@@ -17,29 +17,21 @@
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="avt" translatesAutoresizingMaskIntoConstraints="NO" id="DoC-Qr-87P">
-                        <rect key="frame" x="12.5" y="10" width="160" height="160"/>
+                        <rect key="frame" x="32.5" y="10" width="120" height="120"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="160" id="Lf7-sb-vuG"/>
-                            <constraint firstAttribute="height" constant="160" id="UgS-PN-Usk"/>
-                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="160" id="ZQe-lP-B4D"/>
-                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="160" id="xZH-Ys-Xwi"/>
+                            <constraint firstAttribute="height" constant="120" id="2EH-mP-gpP"/>
+                            <constraint firstAttribute="width" constant="120" id="voA-US-cHE"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="See You Again" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0bb-De-F6f">
-                        <rect key="frame" x="12.5" y="175" width="160" height="21"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="160" id="tMH-YG-htz"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                        <rect key="frame" x="5" y="135" width="175" height="19.5"/>
+                        <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Charlie Puth" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vJv-nw-7Mm">
-                        <rect key="frame" x="12.5" y="201" width="160" height="18"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="160" id="J8L-Hp-qkh"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                        <rect key="frame" x="5" y="159.5" width="175" height="14.5"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
@@ -50,8 +42,10 @@
             <constraints>
                 <constraint firstItem="0bb-De-F6f" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="2sT-k3-OBC"/>
                 <constraint firstItem="DoC-Qr-87P" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="10" id="6W5-KH-KCH"/>
+                <constraint firstItem="0bb-De-F6f" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="5" id="DHw-9r-hX6"/>
                 <constraint firstItem="vJv-nw-7Mm" firstAttribute="top" secondItem="0bb-De-F6f" secondAttribute="bottom" constant="5" id="WCv-4Y-L9Y"/>
                 <constraint firstItem="0bb-De-F6f" firstAttribute="top" secondItem="DoC-Qr-87P" secondAttribute="bottom" constant="5" id="ebK-32-jjq"/>
+                <constraint firstItem="vJv-nw-7Mm" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="5" id="f53-vJ-OsE"/>
                 <constraint firstItem="vJv-nw-7Mm" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="hvt-SS-LMw"/>
                 <constraint firstItem="DoC-Qr-87P" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="tbv-Og-6Cp"/>
             </constraints>
