--- a/SCPlayer/SCPlayer/Controllers/Orthers/Player Screen/PlayerViewController.xib
+++ b/SCPlayer/SCPlayer/Controllers/Orthers/Player Screen/PlayerViewController.xib
@@ -27,35 +27,29 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="avt" translatesAutoresizingMaskIntoConstraints="NO" id="rjQ-hl-Hx6">
-                    <rect key="frame" x="32" y="161" width="350" height="350"/>
+                    <rect key="frame" x="57" y="186" width="300" height="300"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="350" id="SD3-WF-7F6"/>
-                        <constraint firstAttribute="height" constant="350" id="vP4-h8-JGj"/>
+                        <constraint firstAttribute="width" constant="300" id="UYk-Zr-n0S"/>
+                        <constraint firstAttribute="height" constant="300" id="pGD-OZ-vV9"/>
                     </constraints>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="See You Again" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BqO-Xz-8YK">
-                    <rect key="frame" x="50" y="561" width="249" height="50"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="50" id="VyB-D7-u4X"/>
-                    </constraints>
-                    <fontDescription key="fontDescription" type="boldSystem" pointSize="26"/>
+                    <rect key="frame" x="50" y="656" width="254" height="21.5"/>
+                    <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Charlie Puth" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zD6-1f-r5l">
-                    <rect key="frame" x="50" y="619" width="249" height="30"/>
+                    <rect key="frame" x="50" y="677.5" width="254" height="14.5"/>
                     <color key="tintColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="30" id="dM6-9Z-Uqn"/>
-                    </constraints>
-                    <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
                     <nil key="textColor"/>
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TD5-i2-FPw">
-                    <rect key="frame" x="314" y="581" width="50" height="50"/>
+                    <rect key="frame" x="334" y="657" width="30" height="30"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="50" id="Ltg-me-eW2"/>
-                        <constraint firstAttribute="height" constant="50" id="TfT-l8-LY5"/>
+                        <constraint firstAttribute="width" constant="30" id="FTe-pX-HOc"/>
+                        <constraint firstAttribute="height" constant="30" id="TN1-xA-zEQ"/>
                     </constraints>
                     <state key="normal" image="likeHeart"/>
                     <connections>
@@ -63,20 +57,16 @@
                     </connections>
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="--:--" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GAh-n0-UxL">
-                    <rect key="frame" x="314" y="684" width="50" height="30"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="50" id="TkJ-8x-74b"/>
-                        <constraint firstAttribute="height" constant="30" id="tok-oi-2de"/>
-                    </constraints>
+                    <rect key="frame" x="329" y="747" width="35" height="20.5"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LDX-q9-xQ4">
-                    <rect key="frame" x="182" y="724" width="50" height="60"/>
+                    <rect key="frame" x="195.5" y="797" width="23" height="30"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="60" id="3QO-BC-l6Q"/>
-                        <constraint firstAttribute="width" constant="50" id="q6h-bP-geh"/>
+                        <constraint firstAttribute="height" constant="30" id="sG1-uY-EXP"/>
+                        <constraint firstAttribute="width" constant="23" id="srI-Es-SJL"/>
                     </constraints>
                     <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <state key="normal" image="pause"/>
@@ -85,10 +75,10 @@
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jan-En-vmy">
-                    <rect key="frame" x="72" y="739" width="50" height="25"/>
+                    <rect key="frame" x="105.5" y="802" width="25" height="20"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="50" id="8k4-Yd-96k"/>
-                        <constraint firstAttribute="height" constant="25" id="bC2-A4-ZA7"/>
+                        <constraint firstAttribute="height" constant="20" id="JWa-qJ-B7n"/>
+                        <constraint firstAttribute="width" constant="25" id="R9s-Re-HNs"/>
                     </constraints>
                     <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <state key="normal" image="prev"/>
@@ -96,11 +86,20 @@
                         <action selector="previousButton:" destination="-1" eventType="touchUpInside" id="Qeh-eL-qak"/>
                     </connections>
                 </button>
+                <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="M6K-i8-GTd">
+                    <rect key="frame" x="48" y="712" width="318" height="31"/>
+                </slider>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0:0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LjE-L1-VOg">
+                    <rect key="frame" x="50" y="747" width="25.5" height="20.5"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="w9N-al-MHP">
-                    <rect key="frame" x="292" y="739" width="50" height="25"/>
+                    <rect key="frame" x="283.5" y="802" width="25" height="20"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="50" id="O7y-Ck-hal"/>
-                        <constraint firstAttribute="height" constant="25" id="Xac-Me-uPx"/>
+                        <constraint firstAttribute="width" constant="25" id="7UJ-vO-KHa"/>
+                        <constraint firstAttribute="height" constant="20" id="q7u-eO-1Pp"/>
                     </constraints>
                     <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <state key="normal" image="next"/>
@@ -108,46 +107,33 @@
                         <action selector="nextButton:" destination="-1" eventType="touchUpInside" id="rFB-m0-Tho"/>
                     </connections>
                 </button>
-                <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="M6K-i8-GTd">
-                    <rect key="frame" x="48" y="649" width="318" height="31"/>
-                </slider>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0:0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LjE-L1-VOg">
-                    <rect key="frame" x="50" y="684" width="50" height="30"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="50" id="JAZ-zO-IiP"/>
-                        <constraint firstAttribute="height" constant="30" id="ncz-q0-erX"/>
-                    </constraints>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <nil key="textColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstItem="w9N-al-MHP" firstAttribute="leading" secondItem="LDX-q9-xQ4" secondAttribute="trailing" constant="60" id="1IZ-Xe-qiZ"/>
-                <constraint firstItem="zD6-1f-r5l" firstAttribute="top" secondItem="BqO-Xz-8YK" secondAttribute="bottom" constant="8" id="40C-c9-i2m"/>
-                <constraint firstItem="TD5-i2-FPw" firstAttribute="top" secondItem="rjQ-hl-Hx6" secondAttribute="bottom" constant="70" id="9GR-aZ-Lnn"/>
+                <constraint firstItem="TD5-i2-FPw" firstAttribute="leading" secondItem="BqO-Xz-8YK" secondAttribute="trailing" constant="30" id="0q4-9V-CCA"/>
+                <constraint firstItem="w9N-al-MHP" firstAttribute="leading" secondItem="LDX-q9-xQ4" secondAttribute="trailing" constant="65" id="11t-o5-RuV"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="TD5-i2-FPw" secondAttribute="trailing" constant="50" id="4Ck-dz-jXk"/>
+                <constraint firstItem="M6K-i8-GTd" firstAttribute="top" secondItem="zD6-1f-r5l" secondAttribute="bottom" constant="20" id="92j-22-epK"/>
                 <constraint firstItem="rjQ-hl-Hx6" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" multiplier="0.75" id="E5o-5p-ue9"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="M6K-i8-GTd" secondAttribute="trailing" constant="50" id="GxJ-Mb-PUj"/>
-                <constraint firstItem="jan-En-vmy" firstAttribute="top" secondItem="M6K-i8-GTd" secondAttribute="bottom" constant="60" id="HKs-NC-NPL"/>
-                <constraint firstItem="TD5-i2-FPw" firstAttribute="leading" secondItem="BqO-Xz-8YK" secondAttribute="trailing" constant="15" id="Iwn-vV-eYH"/>
-                <constraint firstItem="BqO-Xz-8YK" firstAttribute="top" secondItem="rjQ-hl-Hx6" secondAttribute="bottom" constant="50" id="Khs-MJ-NNJ"/>
-                <constraint firstItem="LDX-q9-xQ4" firstAttribute="top" secondItem="M6K-i8-GTd" secondAttribute="bottom" constant="45" id="Kxs-EO-dzi"/>
                 <constraint firstItem="M6K-i8-GTd" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="50" id="PK9-CP-m6j"/>
-                <constraint firstItem="BqO-Xz-8YK" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="50" id="QVL-lV-YX1"/>
+                <constraint firstItem="zD6-1f-r5l" firstAttribute="top" secondItem="BqO-Xz-8YK" secondAttribute="bottom" id="U4N-Jb-RHv"/>
+                <constraint firstItem="zD6-1f-r5l" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="50" id="V05-DH-aFV"/>
                 <constraint firstItem="rjQ-hl-Hx6" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="VtY-Hs-NbP"/>
-                <constraint firstItem="TD5-i2-FPw" firstAttribute="leading" secondItem="zD6-1f-r5l" secondAttribute="trailing" constant="15" id="Wis-Xm-cyw"/>
                 <constraint firstItem="GAh-n0-UxL" firstAttribute="top" secondItem="M6K-i8-GTd" secondAttribute="bottom" constant="5" id="XoS-NV-SNb"/>
-                <constraint firstItem="zD6-1f-r5l" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="50" id="aDa-aF-hgD"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="TD5-i2-FPw" secondAttribute="trailing" constant="50" id="jEh-2Y-jY3"/>
-                <constraint firstItem="LDX-q9-xQ4" firstAttribute="leading" secondItem="jan-En-vmy" secondAttribute="trailing" constant="60" id="kjk-Qk-Qjq"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="w9N-al-MHP" secondAttribute="bottom" constant="40" id="dUT-qK-3c7"/>
+                <constraint firstItem="LDX-q9-xQ4" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="dXp-sq-T0W"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="LDX-q9-xQ4" secondAttribute="bottom" constant="35" id="hKe-Zw-Mq0"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="GAh-n0-UxL" secondAttribute="trailing" constant="50" id="lZK-bE-Yg6"/>
-                <constraint firstItem="LDX-q9-xQ4" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="oOg-GG-GVC"/>
+                <constraint firstItem="BqO-Xz-8YK" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="50" id="mDq-E8-3fe"/>
+                <constraint firstItem="M6K-i8-GTd" firstAttribute="top" secondItem="TD5-i2-FPw" secondAttribute="bottom" constant="25" id="n1c-aI-ov5"/>
+                <constraint firstItem="LDX-q9-xQ4" firstAttribute="leading" secondItem="jan-En-vmy" secondAttribute="trailing" constant="65" id="uGg-98-bzs"/>
+                <constraint firstItem="TD5-i2-FPw" firstAttribute="leading" secondItem="zD6-1f-r5l" secondAttribute="trailing" constant="30" id="uyc-5y-VUR"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="jan-En-vmy" secondAttribute="bottom" constant="40" id="vdT-aO-gEn"/>
+                <constraint firstItem="LDX-q9-xQ4" firstAttribute="top" secondItem="M6K-i8-GTd" secondAttribute="bottom" constant="55" id="w0W-IJ-Xyl"/>
                 <constraint firstItem="LjE-L1-VOg" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="50" id="xlM-Zo-SCd"/>
-                <constraint firstItem="w9N-al-MHP" firstAttribute="top" secondItem="M6K-i8-GTd" secondAttribute="bottom" constant="60" id="yUI-3p-hye"/>
                 <constraint firstItem="LjE-L1-VOg" firstAttribute="top" secondItem="M6K-i8-GTd" secondAttribute="bottom" constant="5" id="yVK-sm-ED2"/>
-                <constraint firstItem="M6K-i8-GTd" firstAttribute="top" secondItem="zD6-1f-r5l" secondAttribute="bottom" id="zvC-M1-XHI"/>
             </constraints>
             <point key="canvasLocation" x="79.710144927536234" y="94.419642857142847"/>
         </view>
